<resources>
    <string name="app_name">MAP_K0</string>
    <string name="map_id">6c92c2dd989894a2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="comentario">Comenta algo</string>
    <string name="comentar">Comentar</string>
    <string name="menu_drawer_map">Mapa</string>
    <string name="menu_drawer_events">Eventos</string>
    <string name="menu_drawer_auth">Autentificacion</string>
    <string name="add_title">Titulo</string>
    <string name="add_description">Añade una descripción de la localización</string>
    <string name="add_button_text">Añadir</string>
    <string name="Dirección">Dirección</string>
    <string name="add_event">Añadir</string>
    <string name="password">Contraseña</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="button_help">Help button</string>
    <string name="tutorial_image">Tutorial enseñando como crear una localización</string>
    <string name="welcome">¡Bienvenido a Map K0!</string>
    <string name="help_description">Una aplicación destinada a potenciar la convencia vecinal en los barrios ofreciendo la posibilidad de recopilar los intereses del mismo en una sola aplicación.</string>
    <string name="help_tutorial">Podrás crear una localización dejando pulsado en una parte del mapa.</string>
    <string name="help_reminder">Recuerda que deberás registrarte para poder crear localizaciones.</string>
    <string name="map_k0">MAP K0</string>
    <string name="header_description">Desarrollado por: \n Sebastián Forte López</string>
</resources>