<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/background_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@color/orange_500"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/help_description"
        android:textColor="@color/orange_500"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/help_tutorial"
        android:textColor="@color/orange_500"
        android:textStyle="bold"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/help_reminder"
        android:textColor="@color/orange_500"
        android:textStyle="italic"
        android:textSize="15sp"
        />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:src="@drawable/tutorial_add_location"
        android:contentDescription="@string/tutorial_image" />

</LinearLayout>