<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.AddEventFragment">

    <TextView
        android:textAlignment="center"
        android:id="@+id/add_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        tools:text="Test" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_event_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/add_title"
        app:boxStrokeColor="@color/orange_500"
        app:hintTextColor="@color/orange_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_title_input_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textAlignment="center"
        android:id="@+id/add_event_description_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        tools:text="Test" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_event_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_margin="4dp"
        android:hint="@string/add_description"
        app:boxStrokeColor="@color/orange_500"
        app:hintTextColor="@color/orange_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_description_input_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_event_address_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_margin="4dp"
        android:hint="@string/Dirección"
        app:boxStrokeColor="@color/orange_500"
        app:hintTextColor="@color/orange_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_event_address_input_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/event_spinner"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="50dp"/>

    <DatePicker
        android:id="@+id/event_date_picker"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        />

    <Button
        android:id="@+id/add_event_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text" />

</LinearLayout>