<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background_card"
    tools:context=".ui.fragment.AddLocationFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_images_btn"
        android:layout_gravity="center"
        android:layout_width="250dp"
        android:layout_height="200dp"
        app:icon="@drawable/ic_baseline_add_a_photo_24"
        app:iconGravity="textStart"
        app:iconSize="100dp"
        />

    <TextView
        android:textAlignment="center"
        android:id="@+id/add_title_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        tools:text="Test" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/add_title"
        app:boxStrokeColor="@color/orange_500"
        app:hintTextColor="@color/orange_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_title_input_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:textAlignment="center"
        android:id="@+id/add_description_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        tools:text="Test" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/add_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_margin="4dp"
        android:hint="@string/add_description"
        app:boxStrokeColor="@color/orange_500"
        app:hintTextColor="@color/orange_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_description_input_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/add_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_text"
        />
</LinearLayout>